Fix fees view spacing

--- a/src/styles/popup/view/fees.less
+++ b/src/styles/popup/view/fees.less
@@ -5,7 +5,7 @@
     .back-button {
         display: flex;
         align-items: center;
-        margin-bottom: 26px;
+        margin-bottom: 12px;
 
         text-align: left;
         color: @color_text_secondary;
@@ -33,7 +33,7 @@
     }
 
     h3 {
-        margin-bottom: 16px;
+        margin-bottom: 12px;
     }
 
     .wrapper {
@@ -53,9 +53,12 @@
             align-items: center;
             justify-content: space-between;
 
+            transition: 0s;
+
             .fee-title {
                 font-size: 16px;
                 color: @color_text_primary;
+                text-transform: capitalize;
             }
 
             .fee-subtitle {
@@ -144,4 +147,21 @@
 
 .insufficient-funds, .amount-too-low {
     .loader-layout();
+}
+
+@media screen and (max-width: 639px) {
+    .select-fee {
+        .back-button {
+            margin-bottom: 20px;
+        }
+
+        .wrapper {
+            display: block;
+        }
+
+        .send-button {
+            width: 100%;
+            margin: 14px 0 25px;
+        }
+    }
 }
